# samba-daq-system

./: .gitignore  CMakeLists.txt  README.md
Acquis/: Catalogue_local  LastRun  ModelsList  SambaArgs  SambaArgs_boulby  TangoArgs_boulby  install_samba
Acquis/Resources/: edelweiss.icns  version
Acquis/Resources/English.lproj/: InfoPlist.strings  dico
Acquis/Runs/events/vb05p000/: vb05p000_000  vb05p000_log  vb05p000_ntp  vb05p000_setup.csv
Acquis/modeles_EDW/: chassis  environnement  repartiteurs
Acquis/models_NEWSG/: Environment  cablings  detectors  digitizers  dispatchers
Acquis/models_NEWSG/exemples/: Cablage  Repartiteurs
Acquis/models_NEWSG/exemples/Detecteurs/: 1voie_1  FID_1
Acquis/models_NEWSG/exemples/Numeriseurs/: liste
Acquis/prefs/: Calculs  Calendriers  CompteRenduInitial  EtatPolars  Finesses  Modeles  Parametres  RegulEvt  RunCaracteristiques  Simu  Verifications
Acquis/setup_NEWSG/: Affichage  Basic  Calendar  ConfigGenerale  ExpertOnly  Exportations  FileList  Filters  Graphics  InitialReport  LastRun  Parameters  Parametres  Plots  Processings  Reseau  RunCaracteristics  RunConditions  Sequences  Simu
Acquis/setup_NEWSG/Analyse/: CoefsAnalyse
Acquis/setup_NEWSG/Analyse/Graphiques/: Ferrite
Acquis/setup_NEWSG/Hardware/: Cabling  Computers  Dispatcher
Acquis/setup_NEWSG/Hardware/Detectors/: Connexions  sphere-ball-uv  sphere-full-rod
Acquis/setup_NEWSG/Hardware/Digitizers/: CALI  Connexions  RP
Acquis/setup_NEWSG/Support/: prefs  used
Acquis/setup_SPC/: Automates  Debug  Environment  Exportations  FichierExport  FileList  Graphics  Media  ModelsList  Parameters  Plots  Processings  RunCaracteristics  RunConditions  SambaArgs  Sequences  Simu  SupportDefs  SupportVars
Acquis/setup_SPC/Analyse/: EvtUniteTemps  ZonesTemps
Acquis/setup_SPC/Analyse/Graphiques/: basicAlphaPlots  basicPlots  classique1  classique2  fe55Plots
Acquis/setup_SPC/Hardware/: Cabling  Computers  Dispatcher
Acquis/setup_SPC/Hardware/Detectors/: Connexions  sphere_2channels
Acquis/setup_SPC/Hardware/Digitizers/: AdcCali_04  Connexions
Acquis/setup_SPC/Hardware/Models_SPC/: cablings  detectors  digitizers  dispatchers  environnement  support  support2D
Acquis/setup_SPC/Hardware/Models_SPC/exemples/Detecteurs/: liste
Acquis/setup_SPC/Hardware/Models_SPC/exemples/Numeriseurs/: BB1_32  BB2_04  Bouchon_01
Acquis/setup_SPC/Support/: definition  prefs
lib/: CMakeLists.txt  environnement.h
lib/cephes/: ellf.c  ellfcopie.c
lib/db/: db.c  db.h
lib/opium4/: aide.c  editeur.c  figures.c  graphs.c  histos.c  histos.h  impression.c  impression.h  infos.c  instrum.c  logbook.c  menus.c  nanopaw.c  nanopaw.h  opium.c  opium.h  opium_wx_interface.cpp  opium_wx_interface.h  panels.c  planches.c  prompts.c  samba_app.cpp  samba_app.hpp  samba_evt_handler.cpp  samba_evt_handler.hpp  samba_wnd.cpp  samba_wnd.hpp  terms.c  wnd.c  wnd.h
lib/tcp/: html.c  html.h  serveur.c  serveur.h  sktlib.c  sktlib.h  svrnul.c
lib/utils/: Paw.c  calendrier.c  calendrier.h  ceb.c  ceb.h  claps.c  claps.h  dateheure.c  dateheure.h  decode.c  decode.h  defineVAR.h  dico.c  filtres.c  fitlib.c  fitlib.h  gogol.h  rand.c  shared_memory.c  shared_memory.h  timeruser.c  timeruser.h  verroux.c
samba/: CMakeLists.txt  English_dico  Samba.cpp  SambaConfig.cpp  SambaConfig.hpp  archive.c  autom.c  autom.h  banc.c  banc.h  basic.c  cablage.c  cablage.h  calculs.c  detecteurs.c  diags.c  export.c  export.h  gener.c  lect.c  media.c  media.h  monit.c  monit.h  numeriseurs.c  numeriseurs.h  objets_samba.h  organigramme.c  organigramme.h  perso.c  plplot_test.cpp  plplot_test.hpp  release.h  repartiteurs.c  repartiteurs.h  samba.c  samba.h  scripts.c  scripts.h  sequences.c  (+7 more)
samba/PCI/: IcaLib.c  IcaLib.h  PciDefine.h  PciLib.c  PciLib.h
samba/PCI/Driver/: ICAClient.cpp  ICADriver.cpp  ICADriver.h  ICADriverV0.cpp
samba/PCI/Reserve/: PciStructs.h  carte_pci.h  pciIntLib.h  pciIomapLib.h  pciLocalBus.h  pcidebug.c  tpci.c
samba/salsa/: archive.h  defauts.c  detecteurs.h  edwdb.c  edwdb.h  evenement.h  rundata.h
tango/: CMakeLists.txt  calib.c  evtread.c  evtread.h  release.h  tango.c  tango.h  vsninfo.h
tango/EDW/: affichage.c  analyse.h  production.c  relecture.c
